--- a/index.html
+++ b/index.html
@@ -14,12 +14,21 @@
 
 <header class="landing">
 <h1>Our Love Story</h1>
-<p>By Zaid & My Love</p>
+<p>By Zaid & Kaysia</p>
 </header>
 
 <section class="section" id="our-story">
 <h2>Our Story</h2>
-<p>Write your story moments here…</p>
+<div id="story-container">
+<div class="story-screen active">
+<p>At first, it was a little rocky. We kept making eye contact, but we never got into contact — and when we did, it was always on and off.</p>
+<button class="next-btn">Next</button>
+</div>
+<div class="story-screen">
+<p>That is, until <strong>11/05/24</strong> — the day I made you my girlfriend, and suddenly the world started changing.</p>
+<button class="next-btn" data-end="true">See Gallery</button>
+</div>
+</div>
 </section>
 
 <section class="section" id="gallery">
