--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
 
 <section class="section" id="favorite-memories">
 <h2>Favorite Memories</h2>
-<div class="memory-card">Add memory text here…</div>
+<div class="memory-card">Zoo Date</div>
+<div class="memory-card">Macy Run's for a suit</div>
+<div class="memory-card">First time sat on lap</div>
+<div class="memory-card">First time walked you home</div>
+<div class="memory-card">And so much more to make with you baby.</div>
+<h2>Worst Memories</h2>
+<div class="memory-card">My money gone</div>
+
 </section>
 
 <section class="section" id="countdown-section">
